some functions added to feed page

--- a/.env
+++ b/.env
@@ -27,5 +27,6 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-FACEBOOK_CALLBACK_URL=http://localhost:83/auth/facebook/callback
-GOOGLE_CALLBACK_URL=http://localhost:83/auth/google/callback
+FACEBOOK_CALLBACK_URL=http://35.164.11.119:83/auth/facebook/callback
+GOOGLE_CALLBACK_URL=http://35.164.11.119:83/auth/google/callback
+REAL_SERVER_URL="http://35.164.11.119:83"
