--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=base64:K6DE6BEwPH4W350viviEfdYWq94QdEe12/sFQ4dawFY=
-APP_URL=http://localhost:83
+APP_URL=http://35.164.11.119:83
 DB_URL=db1.cpvl5hhlx94k.us-west-2.rds.amazonaws.com
 DB_USER=kanoopinc
 DB_PWD=NqTTNgnPa9L6!z#Yg4
