--- a/.env1
+++ b/.env1
@@ -65,3 +65,8 @@ MAIL_ENCRYPTION=null
 FACEBOOK_CALLBACK_URL=http://35.164.11.119:83/auth/facebook/callback
 GOOGLE_CALLBACK_URL=http://35.164.11.119:83/auth/google/callback
 REAL_SERVER_URL="http://35.164.11.119:83"
+'google' => [
+        'client_id'     => "611795058461-sug2crd0ka0jadgccm7jb8rg2rj57nkc.apps.googleusercontent.com",
+        'client_secret' => "yJuZXaYwcNt-hH5wLZ8DY7LN",
+        'redirect'      => "http://localhost:83/auth/google/callback",
+    ],
